test: switch to local i18n data

--- a/src/skin/ipe-default.css
+++ b/src/skin/ipe-default.css
@@ -603,7 +603,7 @@
 .in-page-edit label input[type='radio'] + span::before {
   border-radius: 50%;
   box-sizing: border-box;
-  vertical-align: middle;
+  vertical-align: text-bottom;
 }
 
 .in-page-edit label input[type='checkbox']:checked + span::before {
