--- a/src/skin/ipe-default.css
+++ b/src/skin/ipe-default.css
@@ -91,7 +91,7 @@
   font-style: normal;
   font-family: sans-serif;
   font-weight: bold;
-  background: #ffffff;
+  background: #fff;
   color: #252525;
   font-size: 1.1em;
   line-height: 1.8em;
@@ -148,8 +148,8 @@
 }
 
 .in-page-edit.ipe-editor .toolSelect .label {
-  color: #222222;
-  background-color: #ffffff;
+  color: #222;
+  background-color: #fff;
   background-image: linear-gradient(transparent, transparent),
     url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxNiIgaGVpZ2h0PSIxNiI+PHBhdGggZD0iTTEzLjAwMiA2LjAwMWwtNSA1LjAwMS01LTUuMDAxeiIgZmlsbD0iIzc5Nzk3OSIvPjwvc3ZnPg==');
   background-repeat: no-repeat;
@@ -163,7 +163,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  background: #ffffff;
+  background: #fff;
   border: 1px solid #c8ccd1;
   position: absolute;
   z-index: 50;
@@ -264,7 +264,7 @@
 }
 
 .in-page-edit .btn.btn-secondary:hover {
-  background-color: #ffffff;
+  background-color: #fff;
   color: #454545;
 }
 
@@ -290,13 +290,13 @@
 
 .in-page-edit .btn:disabled {
   background-color: #c8ccd1 !important;
-  color: #ffffff !important;
+  color: #fff !important;
   cursor: not-allowed;
 }
 
 .in-page-edit .btn:disabled:hover {
   background-color: #c8ccd1 !important;
-  color: #ffffff !important;
+  color: #fff !important;
 }
 
 .in-page-edit .btn:disabled .ssi-countDown {
@@ -346,7 +346,7 @@
 .in-page-edit .btn.btn-primary.btn-danger {
   background: #d33;
   border-color: #d33;
-  color: #ffffff;
+  color: #fff;
 }
 
 .in-page-edit .btn.btn-primary.btn-danger:hover {
@@ -602,7 +602,7 @@
 .in-page-edit label input[type='checkbox']:active + span::before,
 .in-page-edit label input[type='checkbox']:focus + span::before {
   box-shadow: inset 0 0px 0px 1px rgb(255, 255, 255);
-  border-color: #3366cc;
+  border-color: #36c;
 }
 
 .in-page-edit label input[type='checkbox'],
